2013-12-13  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/library/bignum.c (mpi_exp_mod): Initialize lower
	half of T with zero.
	(mpi_montmul): Don't need to clear lower half of
	T, as we keep zero.  Call mpi_sub_hlp with upper half of T.
	(mpi_montred): Ditto.

	* polarssl/library/bignum.c (mpi_montmul, mpi_montred): Minimize
	number of limbs for T.
	(mpi_exp_mod): Only allocate N-n * 2 for T.
	Only allocate N->n for X, W[i], and RR.

2013-12-13  Niibe Yutaka  <gniibe@fsij.org>

	* tool/upgrade_by_passwd.py (main): Support -k to specify KEYNO.

2013-12-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_ctrl.c (HID_LED_STATUS_CARDCHANGE): Rename from
	HID_LED_STATUS_NUMLOCK.

	* tool/gnuk_token.py (gnuk_token.stop_gnuk): Detach kernel
	driver of HID.

2013-12-12  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (do_openpgpcard_aid): Coerce to volatile to
	force memory access at run time.

2013-12-11  Niibe Yutaka  <gniibe@fsij.org>

	* regnual/sys.c (entry): Fix relocation calculation.

2013-11-27  Niibe Yutaka  <gniibe@fsij.org>

	* src/stm32f103.h (AFIO_MAPR_SWJ_CFG_DISABLE): New.
	* src/sys.c: Likewise.

2013-11-26  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_desc.c (hid_report_desc): New.
	(ICC_TOTAL_LENGTH): Update.
	(HID_TOTAL_LENGTH, HID_NUM_INTERFACES): New.
	(W_TOTAL_LENGTH, NUM_INTERFACES): Update.
	(gnukConfigDescriptor): Add IN2 interrupt endpoint descriptor.
	Add HID interface descriptor.
	(usb_cb_get_descriptor): Handle HID.

	* src/usb_ctrl.c (NUM_INTERFACES, MSC_INTERFACE_NO): Add 1.
	(USB_HID_REQ_*, HID_LED_STATUS_NUMLOCK): New.
	(gnuk_setup_endpoints_for_interface): Add ENDP2 interrupt
	endpoint.
	(usb_cb_setup): Handle HID requests.
	(usb_cb_ctrl_write_finish): Likewise.

	* src/usb-icc.c (ccid_card_change_signal): New.
	(ccid_thread): Handle card change.
	(icc_error, icc_send_status): Handle ICC_STATE_NOCARD state.
	(icc_handle_data): Add the case of ICC_STATE_NOCARD.
	(EP2_IN_Callback): New.

2013-11-26  Niibe Yutaka  <gniibe@fsij.org>
